--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generation of AST types and helper functions",
   "main": "lib/index.js",
   "scripts": {
-    "sample": "ts-node scripts/astgen.ts samples/expr.yaml | tee samples/expr.ts",
+    "sample": "yarn sample:expr && yarn sample:repmin",
+    "sample:expr": "ts-node scripts/astgen.ts samples/expr.yaml | tee samples/expr.ts",
+    "sample:repmin": "ts-node scripts/astgen.ts samples/repmin.yaml | tee samples/repmin.ts",
     "build": "tsc",
     "test": "jest"
   },
