--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "sample:expr": "ts-node scripts/astgen.ts samples/expr.yaml | tee samples/expr.ts",
     "sample:repmin": "ts-node scripts/astgen.ts samples/repmin.yaml | tee samples/repmin.ts",
     "sample:kitchen": "ts-node scripts/astgen.ts samples/kitchen.yaml | tee samples/kitchen.ts",
+    "sample:dogfood": "ts-node scripts/astgen.ts samples/dogfood.yaml | tee samples/dogfood.ts",
     "build": "tsc",
     "test": "jest"
   },
