--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/src/index.js",
   "scripts": {
     "prepublish": "tsc",
-    "sample": "yarn sample:expr && yarn sample:repmin && yarn sample:kitchen",
+    "sample": "yarn sample:expr && yarn sample:repmin && yarn sample:kitchen && yarn sample:dogfood",
     "sample:expr": "ts-node scripts/verger.ts samples/expr.yaml | tee samples/expr.ts",
     "sample:repmin": "ts-node scripts/verger.ts samples/repmin.yaml | tee samples/repmin.ts",
     "sample:kitchen": "ts-node scripts/verger.ts samples/kitchen.yaml | tee samples/kitchen.ts",
@@ -35,6 +35,7 @@
   "dependencies": {
     "clipanion": "^3.0.0-rc.12",
     "fs-extra": "^10.0.0",
+    "prettier": "^2.3.2",
     "purify-ts": "^0.16.3",
     "yaml": "^1.10.2"
   }
