--- a/samples/dogfood.yaml
+++ b/samples/dogfood.yaml
@@ -12,7 +12,8 @@ nodes:
       - subtypes: string[]
     ASTLeafType:
       - tag: string
-      - rootUnion: string
+      - rootUnion: ASTUnionType
+      - parentUnion: ASTUnionType
       - name: string
       - bases: string[]
       - fields: Field{}
