Changes to dogfood

--- a/samples/dogfood.yaml
+++ b/samples/dogfood.yaml
@@ -7,22 +7,24 @@ nodes:
     NodeType:
       - types: string[]
   ASTTree:
-    Field:
-      - type: FieldType
-      - struct: .scalar|.optional|.map|.array|.set
     ASTUnionType:
       - name: string
       - subtypes: string[]
-    ASTBaseType:
-      - name: string
-      - bases: string[]
-      - fields: Field{}
     ASTLeafType:
       - tag: string
       - rootUnion: ASTUnionType
       - name: string
       - bases: string[]
       - fields: Field{}
+
+bases:
+  ASTBaseType:
+    - name: string
+    - bases: string[]
+    - fields: Field{}
+  Field:
+    - type: FieldType
+    - struct: .scalar|.optional|.map|.array|.set
 
 options:
   tagName: kind
