--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "verger",
   "version": "0.2.0",
   "description": "Generation of AST types and helper functions",
-  "main": "lib/src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "prepublish": "tsc",
     "sample": "yarn sample:expr && yarn sample:repmin && yarn sample:kitchen && yarn sample:dogfood",
@@ -27,17 +27,18 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.3",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "clipanion": "^3.0.0-rc.12",
+    "clipanion": "^3.1.0",
     "fs-extra": "^10.0.0",
     "prettier": "^2.3.2",
     "purify-ts": "^0.16.3",
+    "typanion": "^3.7.1",
     "yaml": "^1.10.2"
   }
 }
