refactor: added leaf (only) code, next is base

--- a/samples/ir.yaml
+++ b/samples/ir.yaml
@@ -6,9 +6,12 @@ nodes:
     LeafNode:
       - tag: string
       - name: string
+      - parentUnion: string
+      - rootUnion: string
       - bases: string[]
       - fields: Field{}
     BaseNode:
+      - bases: string[]
       - fields: Field{}
     UnionNode:
       - name: string
